--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "npm": "^5.6.0",
+    "suncalc": "^1.8.0",
     "unix-timestamp": "^0.2.0"
   },
   "devDependencies": {},
